--- a/ffigen_codelab/codelab_rebuild.yaml
+++ b/ffigen_codelab/codelab_rebuild.yaml
@@ -15,6 +15,36 @@ steps:
         rm: ffigen_app/LICENSE
       - name: Remove README
         rm: ffigen_app/README.md
+      - name: Add .gemini directory
+        mkdir: ffigen_app/.gemini
+      - name: Add .gemini/settings.json
+        path: ffigen_app/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
+      - name: Add .gemini directory
+        mkdir: ffigen_app/example/.gemini
+      - name: Add .gemini/settings.json
+        path: ffigen_app/example/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: Add .vscode directory
         mkdir: ffigen_app/.vscode
       - name: Add .vscode/launch.json
