--- a/github-client/codelab_rebuild.yaml
+++ b/github-client/codelab_rebuild.yaml
@@ -9,6 +9,21 @@ steps:
       - name: Update dependencies
         path: window_to_front
         flutter: pub upgrade --major-versions
+      - name: Add .gemini directory
+        mkdir: window_to_front/.gemini
+      - name: Add .gemini/settings.json
+        path: window_to_front/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: Replace analysis_options.yaml
         path: window_to_front/analysis_options.yaml
         replace-contents: |
@@ -411,6 +426,21 @@ steps:
           include: ../../analysis_options.yaml
       - name: Remove the README.md.
         rm: github_client/README.md
+      - name: Add .gemini directory
+        mkdir: github_client/.gemini
+      - name: Add .gemini/settings.json
+        path: github_client/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: VSCode config
         mkdir: github_client/.vscode
       - name: Add launch.json
